package v1

import (
	"context"

	"google.golang.org/grpc"

	"github.com/kubernetes-csi/csi-proxy/internal/apiversion"
	// TODO wkpo grep for server?
	server "github.com/kubernetes-csi/csi-proxy/integrationtests/apigroups/server/dummy"
)

var version = apiversion.NewVersionOrPanic("v1")

func init() {
	server.RegisterVersion(version, NewV1Server)
}

// TODO wkpo actually generate that shit...

// TODO wkpo rename to versionedServer, and same below?
type v1Server struct {
	apiGroupServer *server.Server
}

func NewV1Server(apiGroupServer *server.Server) server.VersionedApi {
	return &v1Server{
		apiGroupServer: apiGroupServer,
	}
}

// TODO wkpo revisit all public/private?
func (s *v1Server) Register(grpcServer *grpc.Server) {
	RegisterDummyServer(grpcServer, s)
}

// TODO wkpo next, apres generation
func (s *v1Server) ComputeDouble(ctx context.Context, v1Request *ComputeDoubleRequest) (*ComputeDoubleResponse, error) {
	request := &server.ComputeDoubleRequest{}
	if err := Convert_v1_ComputeDoubleRequest_To_server_ComputeDoubleRequest(v1Request, request); err != nil {
		return nil, err
	}
	response, err := s.apiGroupServer.ComputeDouble(ctx, request, version)
	if err != nil {
		return nil, err
	}
	v1Response := &ComputeDoubleResponse{}
	if err = Convert_server_ComputeDoubleResponse_To_v1_ComputeDoubleResponse(response, v1Response); err != nil {
		return nil, err
	}
	return v1Response, nil
}

func (s *v1Server) TellMeAPoem(ctx context.Context, v1Request *TellMeAPoemRequest) (*TellMeAPoemResponse, error) {
	request := &server.TellMeAPoemRequest{}
	if err := Convert_v1_TellMeAPoemRequest_To_server_TellMeAPoemRequest(v1Request, request); err != nil {
		return nil, err
	}
	response, err := s.apiGroupServer.TellMeAPoem(ctx, request, version)
	if err != nil {
		return nil, err
	}
	v1Response := &TellMeAPoemResponse{}
	if err = Convert_server_TellMeAPoemResponse_To_v1_TellMeAPoemResponse(response, v1Response); err != nil {
		return nil, err
	}
	return v1Response, nil
}

// TODO wkpo 1st line!
// Code generated by server-gen. DO NOT EDIT.
